--- a/resume.tex
+++ b/resume.tex
@@ -81,6 +81,6 @@ Percentage: \textbf{94.56\%}
 
 %--------------- Hobbies ---------------
 \section*{Hobbies}
-Singing, music production, learning martial arts, exploring cloud and automation technologies.
+Music, Watching Movies, exploring cloud and automation technologies.
 
 \end{document}
