correct github account link

--- a/resume.tex
+++ b/resume.tex
@@ -25,7 +25,7 @@
     \textbf{\Large Vinay D G} \\
     Tumakuru, Karnataka – 572106 \quad | \quad +91 91102 44067 \\
     \href{mailto:vinaydg2001@gmail.com}{vinaydg2001@gmail.com} \quad | \quad
-    \href{https://github.com/vinaydg}{github.com/vinaydg} \quad | \quad
+    \href{https://github.com/LavishPrince}{github.com/LavishPrice} \quad | \quad
     \href{https://www.linkedin.com/in/vinay-d-g-976207212/}{linkedin.com/in/vinay-d-g-976207212}
 \end{center}
 
