refining the resume

--- a/resume.tex
+++ b/resume.tex
@@ -1,7 +1,7 @@
 \documentclass[a4paper,10pt]{article}
 
 % Packages
-\usepackage[margin=0.75in]{geometry}
+\usepackage[left=0.75in, right=0.75in, top=0.6in, bottom=0.6in]{geometry}
 \usepackage{enumitem}
 \usepackage{hyperref}
 \usepackage{parskip}
@@ -21,47 +21,55 @@
 \begin{document}
 
 % Header
-\begin{center}
-    \textbf{\Large Vinay D G} \\
-    Tumakuru, Karnataka – 572106 \quad | \quad +91 91102 44067 \\
-    \href{mailto:vinaydg2001@gmail.com}{vinaydg2001@gmail.com} \quad | \quad
-    \href{https://github.com/LavishPrince}{github.com/LavishPrince} \quad | \quad
-    \href{https://www.linkedin.com/in/vinay-d-g-976207212/}{linkedin.com/in/vinay-d-g-976207212}
-\end{center}
+\textbf{\Large Vinay D G} \\Tumakuru, Karnataka – 572106 \quad | \quad +91 91102 44067 \quad | \quad \href{mailto:vinaydg2001@gmail.com}{vinaydg2001@gmail.com} \\\href{https://github.com/LavishPrince}{github.com/LavishPrince} \quad | \quad \href{https://www.linkedin.com/in/vinay-d-g-976207212/}{linkedin.com/in/vinay-d-g-976207212}
 
 % Skills
 \section*{Skills}
-JavaScript, Python, C, C++, SQL, Bash, HTML5, CSS3, React, Bootstrap, Responsive Design, Flask, Jinja2, REST APIs, Nginx, Docker, Kubernetes, Jenkins, GitHub Actions, Git, Ansible, Linux, AWS Lambda, AWS EC2, AWS S3, AWS CloudFormation, AWS Step Function, AWS Batch, Azure App Service, Azure Blob Storage, Azure Virtual Network, PostgreSQL, Snowflake, MySQL, SQLite, Postman, VS Code, Notion, Agile, Scrum, Figma
+\textbf{Programming Languages:} Python, Bash, JavaScript, C, C++, SQL, HTML5, CSS3
+\textbf{Cloud Platforms:} AWS (Lambda, EC2, S3, CloudFormation, Step Function, Batch), Azure (App Service, Blob Storage, Virtual Network)
+\textbf{DevOps/Tools:} Docker, Kubernetes, Jenkins, GitHub Actions, Git, Ansible, Nginx, Postman, VS Code, Terraform, Prometheus, Grafana
+\textbf{Databases:} PostgreSQL, MySQL, SQLite, Snowflake
+\textbf{Frameworks/Libraries:} React, Bootstrap, Flask, Jinja2, REST APIs
+\textbf{Methodologies:} Agile, Scrum
+\textbf{Operating Systems:} Linux
+\textbf{Design:} Figma, Responsive Design
 
 % Profile
 \section*{Profile}
-Aspiring Full Stack Developer with a background in Electronics and Communication Engineering. Skilled in building responsive web applications, RESTful APIs, and deploying scalable apps on cloud platforms. Passionate about solving real-world problems using clean code, modern frameworks, and DevOps practices.
+Highly motivated DevOps Engineer with 2 years of experience, complemented by a background in Electronics and Communication Engineering. Seeking a challenging role to leverage expertise in automating infrastructure, streamlining CI/CD pipelines, and deploying scalable solutions on cloud platforms. Passionate about optimizing development workflows, ensuring system reliability, and driving impactful technological solutions through clean code and modern DevOps practices.
+
+% Experience
+\section*{Experience}
+\textbf{DevOps Engineer} \
+Travancore Analytics \ \hfill Sep 2023 – Present
+\begin{itemize}[leftmargin=0.5in, label=\textbullet]
+    \item Designed and implemented robust CI/CD pipelines using Jenkins and GitHub Actions to automate software delivery, reducing deployment time and improving release frequency.
+    \item Managed and provisioned cloud infrastructure on AWS and Azure using Infrastructure as Code (IaC) principles with tools like CloudFormation, ensuring scalable and reproducible environments.
+    \item Implemented monitoring and logging solutions (e.g., CloudWatch) to ensure system health, proactively identify issues, and optimize application performance.
+    \item Collaborated with development teams to integrate security best practices into the SDLC and troubleshoot production issues, enhancing system stability and reliability.
+    \item Automated routine operational tasks using scripting (Bash, Python) to improve efficiency and reduce manual intervention.
+\end{itemize}
+
 
 % Projects
 \section*{Projects}
-\textbf{Parking Booking System} – Flask, MySQL, JavaScript
-
-Developed a full-stack web app for real-time parking slot booking with user authentication and dynamic UI using Jinja2 and Bootstrap.
-
 \textbf{CI/CD Pipeline for .NET App} – Jenkins, Docker, AWS EC2
-
-Built an automated CI/CD pipeline using Jenkins and Docker to containerize and deploy a .NET application to Windows-based EC2 instances.
+\begin{itemize}[leftmargin=0.25in, label=\textbullet]
+    \item Engineered an automated CI/CD pipeline using Jenkins and Docker to containerize and deploy a .NET application to Windows-based AWS EC2 instances.
+    \item Significantly enhanced deployment efficiency and reliability through automation, reducing manual intervention and potential errors.
+\end{itemize}
 
 \textbf{AWS Lambda Monitoring Tool} – AWS Lambda, CloudWatch, CloudFormation
-
-Created a Lambda-based monitoring function to parse logs from multiple Lambda functions and trigger alerts on timeouts or errors.
+\begin{itemize}[leftmargin=0.25in, label=\textbullet]
+    \item Developed a robust Lambda-based monitoring function to efficiently parse logs from multiple AWS Lambda functions.
+    \item Implemented timely alerts on critical events like timeouts or errors, significantly improving operational visibility and response times.
+\end{itemize}
 
 \textbf{Azure Web App Deployment} – Azure App Service, Blob Storage, MySQL
-
-Designed and deployed a secure, scalable web app on Azure with backend data isolation in a Virtual Network.
-
-\textbf{Wordle Game Clone} – HTML, CSS, JavaScript
-
-Built a responsive, browser-based clone of Wordle with game logic, color feedback, and mobile-friendly UI.
-
-\textbf{ICERECT 2022 Conference Website} – HTML, CSS
-
-Designed and deployed a static site for an international engineering conference with mobile responsiveness and clean UX.
+\begin{itemize}[leftmargin=0.25in, label=\textbullet]
+    \item Architected and deployed a secure, scalable web application on Azure, leveraging Azure App Service, Blob Storage, and MySQL.
+    \item Ensured robust backend data isolation within a Virtual Network, enhancing security and compliance.
+\end{itemize}
 
 % Education
 \section*{Education}
@@ -79,7 +87,7 @@ Percentage: 94.56\%
 
 % Hobbies
 \section*{Hobbies}
-Playing music, watching movies, and exploring cloud-native and automation technologies.
+Listening music, watching movies, and exploring cloud-native and automation technologies.
 
 \end{document}
 
