--- a/resume.tex
+++ b/resume.tex
@@ -26,8 +26,8 @@
 % Skills
 \section*{Skills}
 \textbf{Programming Languages:} Python, Bash, JavaScript, C, C++, SQL, HTML5, CSS3
-\textbf{Cloud Platforms:} AWS (Lambda, EC2, S3, CloudFormation, Step Function, Batch), Azure (App Service, Blob Storage, Virtual Network)
-\textbf{DevOps/Tools:} Docker, Kubernetes, Jenkins, GitHub Actions, Git, Ansible, Nginx, Postman, VS Code, Terraform, Prometheus, Grafana
+\textbf{Cloud Platforms:} AWS (Lambda, EC2, S3, CloudFormation, Step Function, Batch, Secrets Manager), Azure (App Service, Blob Storage, Virtual Network)
+\textbf{DevOps/Tools:} Docker, Kubernetes, Jenkins, GitHub Actions, Git, Ansible, Nginx, Postman, Terraform, Prometheus, Grafana, Fastlane, Splunk
 \textbf{Databases:} PostgreSQL, MySQL, SQLite, Snowflake
 \textbf{Frameworks/Libraries:} React, Bootstrap, Flask, Jinja2, REST APIs
 \textbf{Methodologies:} Agile, Scrum
@@ -36,7 +36,7 @@
 
 % Profile
 \section*{Profile}
-Highly motivated DevOps Engineer with 2 years of experience, complemented by a background in Electronics and Communication Engineering. Seeking a challenging role to leverage expertise in automating infrastructure, streamlining CI/CD pipelines, and deploying scalable solutions on cloud platforms. Passionate about optimizing development workflows, ensuring system reliability, and driving impactful technological solutions through clean code and modern DevOps practices.
+A results-driven engineer with 2 years of experience, blending a strong background in Electronics and Communication Engineering with a passion for both robust software development and efficient DevOps practices. Eager to contribute expertise in designing, implementing, and optimizing scalable applications, while also streamlining CI/CD pipelines and ensuring system reliability. Committed to delivering impactful technological solutions through clean code, innovative practices, and a strong understanding of infrastructure.
 
 % Experience
 \section*{Experience}
@@ -53,21 +53,32 @@ Travancore Analytics \ \hfill Sep 2023 – Present
 
 % Projects
 \section*{Projects}
-\textbf{CI/CD Pipeline for .NET App} – Jenkins, Docker, AWS EC2
+	\textbf{Data Integration and Dashboarding Project} – Snowflake, PostgreSQL, AWS QuickSight
 \begin{itemize}[leftmargin=0.25in, label=\textbullet]
-    \item Engineered an automated CI/CD pipeline using Jenkins and Docker to containerize and deploy a .NET application to Windows-based AWS EC2 instances.
-    \item Significantly enhanced deployment efficiency and reliability through automation, reducing manual intervention and potential errors.
+    \item Developed a robust data pipeline to extract and enrich data from Snowflake, ensuring data quality and consistency.
+    \item Integrated processed data into PostgreSQL databases, optimizing for efficient querying and reporting.
+    \item Created interactive dashboards in AWS QuickSight, providing key business insights and visualizations from the integrated data.
 \end{itemize}
 
-\textbf{AWS Lambda Monitoring Tool} – AWS Lambda, CloudWatch, CloudFormation
+
+	\textbf{Automated Cloud Infrastructure and CI/CD Platform} – Terraform, Jenkins, Prometheus, Grafana, AWS/Azure
 \begin{itemize}[leftmargin=0.25in, label=\textbullet]
-    \item Developed a robust Lambda-based monitoring function to efficiently parse logs from multiple AWS Lambda functions.
-    \item Implemented timely alerts on critical events like timeouts or errors, significantly improving operational visibility and response times.
+    \item Designed and implemented a scalable, automated cloud infrastructure using Terraform across AWS and Azure, ensuring environment consistency.
+    \item Developed and optimized Jenkins-based CI/CD pipelines for multiple applications, integrating automated testing and deployment stages.
+    \item Established comprehensive monitoring and alerting systems with Prometheus and Grafana, providing real-time insights into application performance and infrastructure health, leading to proactive issue resolution.
+    \item Collaborated with development teams to integrate security best practices into the CI/CD process, enhancing overall system resilience and compliance.
 \end{itemize}
 
-\textbf{Azure Web App Deployment} – Azure App Service, Blob Storage, MySQL
+
+
+
+
+
+
+\textbf{Azure Cloud Solutions} – Azure App Service, Blob Storage, MySQL, Virtual Network
 \begin{itemize}[leftmargin=0.25in, label=\textbullet]
-    \item Architected and deployed a secure, scalable web application on Azure, leveraging Azure App Service, Blob Storage, and MySQL.
+    \item Gained extensive experience in architecting and deploying secure, scalable cloud solutions on Azure, utilizing services like Azure App Service, Blob Storage, and MySQL.
+
     \item Ensured robust backend data isolation within a Virtual Network, enhancing security and compliance.
 \end{itemize}
 
