--- a/resume.tex
+++ b/resume.tex
@@ -26,7 +26,7 @@
 % Skills
 \section*{Skills}
 \textbf{Programming Languages:} Python, Bash, JavaScript, C, C++, SQL, HTML5, CSS3
-\textbf{Cloud Platforms:} AWS (Lambda, EC2, S3, CloudFormation, Step Function, Batch, Secrets Manager), Azure (App Service, Blob Storage, Virtual Network)
+\textbf{Cloud Platforms:} AWS (Lambda, EC2, S3, CloudFormation, Step Function, Batch, Secrets Manager), Azure (App Service, Blob Storage, Virtual Network, Key Vault)
 \textbf{DevOps/Tools:} Docker, Kubernetes, Jenkins, GitHub Actions, Git, Ansible, Nginx, Postman, Terraform, Prometheus, Grafana, Fastlane, Splunk
 \textbf{Databases:} PostgreSQL, MySQL, SQLite, Snowflake
 \textbf{Frameworks/Libraries:} React, Bootstrap, Flask, Jinja2, REST APIs
@@ -75,7 +75,7 @@ Travancore Analytics \ \hfill Sep 2023 – Present
 
 
 
-\textbf{Azure Cloud Solutions} – Azure App Service, Blob Storage, MySQL, Virtual Network
+\textbf{Azure Cloud Solutions} – Azure App Service, Blob Storage, MySQL, Virtual Network, Key Vault
 \begin{itemize}[leftmargin=0.25in, label=\textbullet]
     \item Gained extensive experience in architecting and deploying secure, scalable cloud solutions on Azure, utilizing services like Azure App Service, Blob Storage, and MySQL.
 
@@ -84,17 +84,7 @@ Travancore Analytics \ \hfill Sep 2023 – Present
 
 % Education
 \section*{Education}
-\textbf{B.E. in Electronics and Communication Engineering} \\
-PES College of Engineering (PESCE), Mandya \hfill 2019 – 2023 \\
-CGPA: 7.51 / 10
-
-\textbf{Pre-University Course (PCMB)} \hfill 2017 – 2019 \\
-Mahesh PU College, Tumakuru \\
-Percentage: 79.33\%
-
-\textbf{SSLC} \\
-Chaithanya Vidya Mandira, Tumakuru \hfill 2016 – 2017 \\
-Percentage: 94.56\%
+\textbf{B.E. in Electronics and Communication Engineering}, PES College of Engineering (PESCE), Mandya \hfill 2019 – 2023 \\CGPA: 7.51 / 10
 
 \end{document}
 
