remove unnessary skills in the resume

--- a/resume.tex
+++ b/resume.tex
@@ -25,14 +25,12 @@
 
 % Skills
 \section*{Skills}
-\textbf{Programming Languages:} Python, Bash, JavaScript, C, C++, SQL, HTML5, CSS3
-\textbf{Cloud Platforms:} AWS (Lambda, EC2, S3, CloudFormation, Step Function, Batch, Secrets Manager), Azure (App Service, Blob Storage, Virtual Network, Key Vault)
-\textbf{DevOps/Tools:} Docker, Kubernetes, Jenkins, GitHub Actions, Git, Ansible, Nginx, Postman, Terraform, Prometheus, Grafana, Fastlane, Splunk
+\textbf{Programming Languages:} Python, Bash, Rust, JavaScript, C, C++, SQL, HTML5, CSS3
+\textbf{Cloud Platforms:} AWS, Azure
+\textbf{Tools:} Docker, Kubernetes, Jenkins, GitHub Actions, Git
 \textbf{Databases:} PostgreSQL, MySQL, SQLite, Snowflake
-\textbf{Frameworks/Libraries:} React, Bootstrap, Flask, Jinja2, REST APIs
+\textbf{Frameworks/Libraries:} Pandas, PySpark, React, Tailwind, Flask, Jinja2, REST APIs
 \textbf{Methodologies:} Agile, Scrum
-\textbf{Operating Systems:} Linux
-\textbf{Design:} Figma, Responsive Design
 
 % Profile
 \section*{Profile}
@@ -68,11 +66,6 @@ Travancore Analytics \ \hfill Sep 2023 – Present
     \item Established comprehensive monitoring and alerting systems with Prometheus and Grafana, providing real-time insights into application performance and infrastructure health, leading to proactive issue resolution.
     \item Collaborated with development teams to integrate security best practices into the CI/CD process, enhancing overall system resilience and compliance.
 \end{itemize}
-
-
-
-
-
 
 
 \textbf{Azure Cloud Solutions} – Azure App Service, Blob Storage, MySQL, Virtual Network, Key Vault
