trim down resume

--- a/resume.tex
+++ b/resume.tex
@@ -34,18 +34,18 @@
 
 % Profile
 \section*{Profile}
-A results-driven engineer with 2 years of experience, blending a strong background in Electronics and Communication Engineering with a passion for both robust software development and efficient DevOps practices. Eager to contribute expertise in designing, implementing, and optimizing scalable applications, while also streamlining CI/CD pipelines and ensuring system reliability. Committed to delivering impactful technological solutions through clean code, innovative practices, and a strong understanding of infrastructure.
+A results-driven engineer with 2 years of experience, proficient in Software Development Engineering (SDE) and passionate about robust software development, efficient DevOps practices, and cloud technologies. Eager to contribute expertise in designing, implementing, and optimizing scalable applications, with a strong focus on software development and ensuring system reliability. Committed to delivering impactful technological solutions through clean code, innovative practices, and a strong understanding of infrastructure.
 
 % Experience
 \section*{Experience}
-\textbf{DevOps Engineer} \
+\textbf{DevOps Engineer} \\
 Travancore Analytics \ \hfill Sep 2023 – Present
 \begin{itemize}[leftmargin=0.5in, label=\textbullet]
-    \item Designed and implemented robust CI/CD pipelines using Jenkins and GitHub Actions to automate software delivery, reducing deployment time and improving release frequency.
-    \item Managed and provisioned cloud infrastructure on AWS and Azure using Infrastructure as Code (IaC) principles with tools like CloudFormation, ensuring scalable and reproducible environments.
-    \item Implemented monitoring and logging solutions (e.g., CloudWatch) to ensure system health, proactively identify issues, and optimize application performance.
-    \item Collaborated with development teams to integrate security best practices into the SDLC and troubleshoot production issues, enhancing system stability and reliability.
-    \item Automated routine operational tasks using scripting (Bash, Python) to improve efficiency and reduce manual intervention.
+    \item Engineered and optimized CI/CD pipelines (Jenkins, GitHub Actions) for automated software delivery, significantly reducing deployment times and enhancing release frequency.
+    \item Provisioned and managed scalable cloud infrastructure (AWS, Azure) using Infrastructure as Code (CloudFormation), ensuring reproducible and secure environments.
+    \item Developed and maintained internal tools and scripts (Python, Bash) to automate operational tasks and streamline development workflows, boosting efficiency.
+    \item Implemented comprehensive monitoring and logging solutions (e.g., CloudWatch) to proactively identify and resolve system issues, optimizing application performance.
+    \item Collaborated closely with software development teams to integrate robust security practices and troubleshoot production issues, ensuring system reliability and seamless code-infrastructure integration.
 \end{itemize}
 
 
@@ -53,26 +53,25 @@ Travancore Analytics \ \hfill Sep 2023 – Present
 \section*{Projects}
 	\textbf{Data Integration and Dashboarding Project} – Snowflake, PostgreSQL, AWS QuickSight
 \begin{itemize}[leftmargin=0.25in, label=\textbullet]
-    \item Developed a robust data pipeline to extract and enrich data from Snowflake, ensuring data quality and consistency.
-    \item Integrated processed data into PostgreSQL databases, optimizing for efficient querying and reporting.
-    \item Created interactive dashboards in AWS QuickSight, providing key business insights and visualizations from the integrated data.
+    \item Engineered a robust data pipeline, developing custom scripts and processes to extract and enrich data from Snowflake, ensuring data quality and consistency.
+    \item Implemented data integration solutions to seamlessly load processed data into PostgreSQL databases, optimizing database schemas and queries for efficient reporting.
+    \item Designed and built interactive dashboards using AWS QuickSight, translating complex data into actionable business insights and visualizations.
 \end{itemize}
 
 
 	\textbf{Automated Cloud Infrastructure and CI/CD Platform} – Terraform, Jenkins, Prometheus, Grafana, AWS/Azure
 \begin{itemize}[leftmargin=0.25in, label=\textbullet]
-    \item Designed and implemented a scalable, automated cloud infrastructure using Terraform across AWS and Azure, ensuring environment consistency.
-    \item Developed and optimized Jenkins-based CI/CD pipelines for multiple applications, integrating automated testing and deployment stages.
-    \item Established comprehensive monitoring and alerting systems with Prometheus and Grafana, providing real-time insights into application performance and infrastructure health, leading to proactive issue resolution.
+    \item Architected and deployed a scalable, automated cloud infrastructure using Terraform across AWS and Azure, ensuring environment consistency and reproducibility.
+    \item Developed and optimized Jenkins-based CI/CD pipelines for multiple applications, implementing automated testing, build, and deployment stages.
+    \item Engineered comprehensive monitoring and alerting systems with Prometheus and Grafana, providing real-time insights into application performance and infrastructure health, leading to proactive issue resolution.
     \item Collaborated with development teams to integrate security best practices into the CI/CD process, enhancing overall system resilience and compliance.
 \end{itemize}
 
 
 \textbf{Azure Cloud Solutions} – Azure App Service, Blob Storage, MySQL, Virtual Network, Key Vault
 \begin{itemize}[leftmargin=0.25in, label=\textbullet]
-    \item Gained extensive experience in architecting and deploying secure, scalable cloud solutions on Azure, utilizing services like Azure App Service, Blob Storage, and MySQL.
-
-    \item Ensured robust backend data isolation within a Virtual Network, enhancing security and compliance.
+    \item Architected and deployed secure, scalable cloud solutions on Azure, leveraging services like Azure App Service, Blob Storage, and MySQL to meet specific project requirements.
+    \item Implemented robust backend data isolation within a Virtual Network, significantly enhancing security and ensuring compliance for sensitive data.
 \end{itemize}
 
 % Education
