complete the resume

--- a/resume.tex
+++ b/resume.tex
@@ -1,10 +1,9 @@
-\documentclass[a4paper,10pt]{article}
+\documentclass[a4paper,9pt]{article}
 
 % Packages
-\usepackage[left=0.75in, right=0.75in, top=0.6in, bottom=0.6in]{geometry}
+\usepackage[left=0.6in, right=0.6in, top=0.5in, bottom=0.5in]{geometry}
 \usepackage{enumitem}
 \usepackage{hyperref}
-\usepackage{parskip}
 \pagestyle{empty}
 
 % Hyperlink setup
@@ -34,18 +33,17 @@
 
 % Profile
 \section*{Profile}
-A results-driven engineer with 2 years of experience, proficient in Software Development Engineering (SDE) and passionate about robust software development, efficient DevOps practices, and cloud technologies. Eager to contribute expertise in designing, implementing, and optimizing scalable applications, with a strong focus on software development and ensuring system reliability. Committed to delivering impactful technological solutions through clean code, innovative practices, and a strong understanding of infrastructure.
+An engineer with 2 years of experience, passionate about building robust software, streamlining DevOps, and leveraging cloud technologies. I focus on designing, implementing, and optimizing scalable applications, always aiming for reliable systems and impactful solutions through clean code and innovative practices.
 
 % Experience
 \section*{Experience}
 \textbf{DevOps Engineer} \\
 Travancore Analytics \ \hfill Sep 2023 – Present
-\begin{itemize}[leftmargin=0.5in, label=\textbullet]
-    \item Engineered and optimized CI/CD pipelines (Jenkins, GitHub Actions) for automated software delivery, significantly reducing deployment times and enhancing release frequency.
-    \item Provisioned and managed scalable cloud infrastructure (AWS, Azure) using Infrastructure as Code (CloudFormation), ensuring reproducible and secure environments.
-    \item Developed and maintained internal tools and scripts (Python, Bash) to automate operational tasks and streamline development workflows, boosting efficiency.
-    \item Implemented comprehensive monitoring and logging solutions (e.g., CloudWatch) to proactively identify and resolve system issues, optimizing application performance.
-    \item Collaborated closely with software development teams to integrate robust security practices and troubleshoot production issues, ensuring system reliability and seamless code-infrastructure integration.
+\begin{itemize}[leftmargin=0.25in, label=\textbullet]
+    \item Built and optimized CI/CD pipelines (Jenkins, GitHub Actions) to automate software delivery, speeding up deployments and releases.
+    \item Managed scalable cloud infrastructure (AWS, Azure) with Infrastructure as Code (CloudFormation) for consistent, secure environments.
+    \item Automated tasks and improved workflows using Python/Bash scripts, and set up monitoring/logging (e.g., CloudWatch) for proactive issue resolution and enhanced app performance.
+    \item Collaborated with development teams to integrate security and troubleshoot production issues, ensuring reliable systems.
 \end{itemize}
 
 
@@ -53,7 +51,7 @@ Travancore Analytics \ \hfill Sep 2023 – Present
 \section*{Projects}
 	\textbf{Data Integration and Dashboarding Project} – Snowflake, PostgreSQL, AWS QuickSight
 \begin{itemize}[leftmargin=0.25in, label=\textbullet]
-    \item Engineered a robust data pipeline, developing custom scripts and processes to extract and enrich data from Snowflake, ensuring data quality and consistency.
+    \item Engineered a robust data pipeline, developing custom scripts to extract and enrich data from Snowflake, ensuring data quality and consistency.
     \item Implemented data integration solutions to seamlessly load processed data into PostgreSQL databases, optimizing database schemas and queries for efficient reporting.
     \item Designed and built interactive dashboards using AWS QuickSight, translating complex data into actionable business insights and visualizations.
 \end{itemize}
@@ -63,8 +61,7 @@ Travancore Analytics \ \hfill Sep 2023 – Present
 \begin{itemize}[leftmargin=0.25in, label=\textbullet]
     \item Architected and deployed a scalable, automated cloud infrastructure using Terraform across AWS and Azure, ensuring environment consistency and reproducibility.
     \item Developed and optimized Jenkins-based CI/CD pipelines for multiple applications, implementing automated testing, build, and deployment stages.
-    \item Engineered comprehensive monitoring and alerting systems with Prometheus and Grafana, providing real-time insights into application performance and infrastructure health, leading to proactive issue resolution.
-    \item Collaborated with development teams to integrate security best practices into the CI/CD process, enhancing overall system resilience and compliance.
+    \item Engineered comprehensive monitoring and alerting systems with Prometheus and Grafana, integrating security best practices into the CI/CD process, enhancing overall system resilience and compliance.
 \end{itemize}
 
 
