--- a/resume.tex
+++ b/resume.tex
@@ -38,7 +38,7 @@ An engineer with 2 years of experience, passionate about building robust softwar
 % Experience
 \section*{Experience}
 \textbf{DevOps Engineer} \\
-Travancore Analytics \ \hfill Sep 2023 – Present
+Travancore Analytics Pvt ltd. \ \hfill Sep 2023 – Present
 \begin{itemize}[leftmargin=0.25in, label=\textbullet]
     \item Built and optimized CI/CD pipelines (Jenkins, GitHub Actions) to automate software delivery, speeding up deployments and releases.
     \item Managed scalable cloud infrastructure (AWS, Azure) with Infrastructure as Code (CloudFormation) for consistent, secure environments.
@@ -73,7 +73,7 @@ Travancore Analytics \ \hfill Sep 2023 – Present
 
 % Education
 \section*{Education}
-\textbf{B.E. in Electronics and Communication Engineering}, PES College of Engineering (PESCE), Mandya \hfill 2019 – 2023 \\CGPA: 7.51 / 10
+\textbf{B.E. in Electronics and Communication Engineering}, PES College of Engineering (PESCE), Mandya \hfill 2019 – 2023
 
 \end{document}
 
