--- a/resume.tex
+++ b/resume.tex
@@ -1,4 +1,4 @@
-\documentclass[a4paper,9pt]{article}
+\documentclass[a4paper]{article}
 
 % Packages
 \usepackage[left=0.6in, right=0.6in, top=0.5in, bottom=0.5in]{geometry}
@@ -24,10 +24,10 @@
 
 % Skills
 \section*{Skills}
-\textbf{Programming Languages:} Python, Bash, Rust, JavaScript, C, C++, SQL, HTML5, CSS3
+\textbf{Programming Languages:} Python, Rust, Typescript, JavaScript, C, C++, SQL, Bash, HTML5, CSS3
 \textbf{Cloud Platforms:} AWS, Azure
 \textbf{Tools:} Docker, Kubernetes, Jenkins, GitHub Actions, Git
-\textbf{Databases:} PostgreSQL, MySQL, SQLite, Snowflake
+\textbf{Databases:} Databricks, Snowflake, PostgreSQL, MySQL, SQLite
 \textbf{Frameworks/Libraries:} Pandas, PySpark, React, Tailwind, Flask, Jinja2, REST APIs
 \textbf{Methodologies:} Agile, Scrum
 
@@ -49,7 +49,7 @@ Travancore Analytics Pvt ltd. \ \hfill Sep 2023 – Present
 
 % Projects
 \section*{Projects}
-	\textbf{Data Integration and Dashboarding Project} – Snowflake, PostgreSQL, AWS QuickSight
+\textbf{Data Integration and Dashboarding Project} (Travancore Analytics Pvt ltd.) - Snowflake, PostgreSQL, AWS QuickSight
 \begin{itemize}[leftmargin=0.25in, label=\textbullet]
     \item Engineered a robust data pipeline, developing custom scripts to extract and enrich data from Snowflake, ensuring data quality and consistency.
     \item Implemented data integration solutions to seamlessly load processed data into PostgreSQL databases, optimizing database schemas and queries for efficient reporting.
@@ -57,7 +57,7 @@ Travancore Analytics Pvt ltd. \ \hfill Sep 2023 – Present
 \end{itemize}
 
 
-	\textbf{Automated Cloud Infrastructure and CI/CD Platform} – Terraform, Jenkins, Prometheus, Grafana, AWS/Azure
+\textbf{Automated Cloud Infrastructure and CI/CD Platform} (Travancore Analytics Pvt ltd.) – Terraform, Jenkins, Prometheus, Grafana, AWS/Azure
 \begin{itemize}[leftmargin=0.25in, label=\textbullet]
     \item Architected and deployed a scalable, automated cloud infrastructure using Terraform across AWS and Azure, ensuring environment consistency and reproducibility.
     \item Developed and optimized Jenkins-based CI/CD pipelines for multiple applications, implementing automated testing, build, and deployment stages.
@@ -65,7 +65,7 @@ Travancore Analytics Pvt ltd. \ \hfill Sep 2023 – Present
 \end{itemize}
 
 
-\textbf{Azure Cloud Solutions} – Azure App Service, Blob Storage, MySQL, Virtual Network, Key Vault
+\textbf{Azure Cloud Solutions} (Travancore Analytics Pvt ltd.) – Azure App Service, Blob Storage, MySQL, Virtual Network, Key Vault
 \begin{itemize}[leftmargin=0.25in, label=\textbullet]
     \item Architected and deployed secure, scalable cloud solutions on Azure, leveraging services like Azure App Service, Blob Storage, and MySQL to meet specific project requirements.
     \item Implemented robust backend data isolation within a Virtual Network, significantly enhancing security and ensuring compliance for sensitive data.
